--- a/MilestoneProjects04-06/MilestoneProjects04-06/Base.lproj/Main.storyboard
+++ b/MilestoneProjects04-06/MilestoneProjects04-06/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CpD-OK-bdh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kEU-rk-RhO">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -39,10 +39,29 @@
                             <outlet property="delegate" destination="CpD-OK-bdh" id="BC8-IG-L2v"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="2yr-Ik-DQI"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nFF-lI-eVm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-46" y="7"/>
+            <point key="canvasLocation" x="883.07692307692309" y="6.3981042654028437"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="68i-0T-jqa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kEU-rk-RhO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u3t-VS-8Ma">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="CpD-OK-bdh" kind="relationship" relationship="rootViewController" id="9CE-XH-HZX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VOV-gY-LPa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-46.153846153846153" y="6.3981042654028437"/>
         </scene>
     </scenes>
     <resources>
