--- a/Project07/Project07/Base.lproj/Main.storyboard
+++ b/Project07/Project07/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FK1-D9-Do8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6ht-Da-hw7">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -50,12 +50,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="puN-nH-fot" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="883.07692307692309" y="-46.208530805687204"/>
+            <point key="canvasLocation" x="1812.3076923076922" y="-46.208530805687204"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="0Od-Lh-dPv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FK1-D9-Do8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="82b-wU-8FP"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="b22-gn-Lu4">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
@@ -67,6 +68,23 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9kb-LA-BOV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="883.07692307692309" y="-46.208530805687204"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="wCe-4h-1CU">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6ht-Da-hw7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="djP-zD-QaL">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="FK1-D9-Do8" kind="relationship" relationship="viewControllers" id="7Hs-iG-rvR"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yvR-fP-5de" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-46.153846153846153" y="-46.208530805687204"/>
         </scene>
