Add a storyboard id into navigation controller

--- a/Project07/Project07/Base.lproj/Main.storyboard
+++ b/Project07/Project07/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
         <!--Navigation Controller-->
         <scene sceneID="0Od-Lh-dPv">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FK1-D9-Do8" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavController" automaticallyAdjustsScrollViewInsets="NO" id="FK1-D9-Do8" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="mostRecent" id="82b-wU-8FP"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="b22-gn-Lu4">
@@ -77,6 +77,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6ht-Da-hw7" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="djP-zD-QaL">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
